--- a/220610_Test/220610_Test/220610_Test.vcxproj
+++ b/220610_Test/220610_Test/220610_Test.vcxproj
@@ -142,7 +142,9 @@
     <ClCompile Include="Test.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Bingo.h" />
     <ClInclude Include="card.h" />
+    <ClInclude Include="Snail.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
